fixed overflow in auth pages

--- a/src/App.css
+++ b/src/App.css
@@ -66,10 +66,10 @@
 
 .form input {
   width: 75%;
-  padding: 10px;
+  padding: 7px;
   border-radius: 5px;
   outline: none;
-  margin-top: 30px;
+  margin-top: 25px;
   background-color: transparent;
   border: 2px solid #8146ff;
   color: #f2f5f5;
